--- a/LibraryProject/BasicPages/MenengerPage.xaml
+++ b/LibraryProject/BasicPages/MenengerPage.xaml
@@ -41,8 +41,8 @@
             <Button x:Name="btnBookColl" Content="Book collection" VerticalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Click="btnBookColl_Click" BorderBrush="Black" BorderThickness="3,2,3,3"  Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch"/>
 
             <TextBlock Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Customers panel" FontSize="30" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
-            <Button Content="Add new customer"  Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20"  Grid.Column="4" BorderBrush="Black" BorderThickness="3,5,3,3"/>
-            <Button Content="View all customers" Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Grid.Column="4" BorderThickness="3,5,3,3" BorderBrush="Black"/>
+            <Button x:Name="btnAddCustomer" Content="Add new customer"  Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20"  Grid.Column="4" BorderBrush="Black" BorderThickness="3,5,3,3" Click="btnAddCustomer_Click"/>
+            <Button x:Name="btnViewCustomers" Content="View all customers" Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Grid.Column="4" BorderThickness="3,5,3,3" BorderBrush="Black" Click="btnViewCustomers_Click"/>
 
             <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Employee panel" FontSize="20" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
             <Button x:Name="btnNewEmployee" Content="New employee"  Grid.Row="1" Background="#FF1276CF" FontSize="20" BorderThickness="3,3,3,3" BorderBrush="Black" Grid.Column ="2"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Click="btnNewEmployee_Click"/>
@@ -52,7 +52,7 @@
         </Grid>
         <Button x:Name="btnLogOut" Grid.Row="0" Content="Log Out"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Click="btnLogOut_Click"/>
 
-        <TextBlock Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="201"  FontSize="100" TextAlignment="Center" FontWeight="Bold" FontFamily="Sitka Heading"  TextDecorations="Underline"><Run Text="Book  Library "/><Run Text="and Store "/></TextBlock>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="201"  FontSize="100" TextAlignment="Center" FontWeight="Bold" FontFamily="Sitka Heading"  TextDecorations="Underline" Text="Menenger Panel"/>
     </Grid>
 
 </Page>
