--- a/LibraryProject/Collections/JornalCollectionPage.xaml
+++ b/LibraryProject/Collections/JornalCollectionPage.xaml
@@ -43,7 +43,7 @@
         <Button x:Name="btnJornalViewBack" Grid.Row="1" Content="Back"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" Click="btnJornalViewBack_Click"  BorderBrush="Black"/>
 
         <ListView x:Name="listMenuView" Grid.Column="1" Grid.Row="2" Background="White"/>
-        <ComboBox x:Name="cbFilter" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" Background="White" Height="40" SelectionChanged="cbFilter_SelectionChanged">
+        <ComboBox x:Name="cbFilter" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="White" Height="40" SelectionChanged="cbFilter_SelectionChanged">
             <ComboBoxItem Background="White" Content="By Title"/>
             <ComboBoxItem Content="by Year"/>
             <ComboBoxItem Content="by Country"/>
