--- a/LibraryProject/Collections/BookCollectionPage.xaml
+++ b/LibraryProject/Collections/BookCollectionPage.xaml
@@ -41,7 +41,7 @@
             <TextBox Grid.Column="8" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  TextWrapping="Wrap" VerticalAlignment="Center"  FontSize="24" Background="White"/>
 
         </Grid>
-        <Button x:Name="btnBookViewBack" Grid.Row="1" Content="Back"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click"  BorderBrush="Black"/>
+        <Button x:Name="btnBookViewBack" Grid.Row="1" Content="Back"  VerticalAlignment="Bottom" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click"  BorderBrush="Black" Margin="0,0,0,23"/>
 
         <ListView x:Name="listMenuView" Grid.Column="1" Grid.Row="2" Background="White"/>
         <ComboBox x:Name="cbFilter" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="White" Height="40" SelectionChanged="cbFilter_SelectionChanged">
