--- a/LibraryProject/Collections/BookCollectionPage.xaml
+++ b/LibraryProject/Collections/BookCollectionPage.xaml
@@ -37,8 +37,6 @@
             </Grid.ColumnDefinitions>
             <Button x:Name="btnAddBook" Content="Add"  VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Click="btnAddBook_Click" Grid.Column="0" />
             <Button x:Name="btnRemoveBook" Content="Remove" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="2" Click="btnRemoveBook_Click"/>
-            <Button x:Name="btnFindBy" Content="Search"  VerticalAlignment="Center" HorizontalAlignment="Stretch"  FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="10"/>
-            <TextBox Grid.Column="8" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  TextWrapping="Wrap" VerticalAlignment="Center"  FontSize="24" Background="White"/>
             <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Stretch" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="4" Click="btnUpdate_Click"/>
 
         </Grid>
@@ -54,6 +52,8 @@
             <ComboBoxItem Background="White" Content="Authors"/>
         </ComboBox>
         <TextBlock Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left"   Text="Sorting :" VerticalAlignment="Bottom" FontSize="24" FontWeight="Bold"/>
+        <TextBlock HorizontalAlignment="Center" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Text="Books :" FontSize="36" FontWeight="Bold"/>
+        <TextBlock Grid.Column="1" VerticalAlignment="Center" FontSize="72" TextAlignment="Center" FontFamily="Sitka Banner" FontWeight="Bold" Text="Book Collection"/>
 
 
     </Grid>
