--- a/LibraryProject/Collections/CustomerCollectionPage.xaml
+++ b/LibraryProject/Collections/CustomerCollectionPage.xaml
@@ -47,6 +47,8 @@
             <TextBlock x:Name="custDitalsTxt" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  TextWrapping="Wrap" FontWeight="Bold" FontFamily="Segoe UI Semibold" FontSize="14" />
         </Grid>
         <Button x:Name="btnMenengerBack" Grid.Row="1" Content="Back"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Click="btnMenengerBack_Click"/>
+        <TextBlock HorizontalAlignment="Center" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Text="Customers :" FontSize="36" FontWeight="Bold"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Stretch" Text="Customers Details" VerticalAlignment="Center" FontSize="72" TextAlignment="Center" FontFamily="Sitka Banner" FontWeight="Bold"/>
 
 
     </Grid>
